testsuite/poke.pkl/ass-diag-10.pk
/* { dg-do compile } */

type Foo = struct { computed int i; };

var f = Foo {};
f.i = 10; /* { dg-error "set_i.*not defined" } */
